--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack --mode development",
+        "build": "webpack --mode production",
         "start": "webpack serve --mode development --open"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/cli": "^7.12.17",
+        "@babel/core": "^7.12.17",
+        "@babel/preset-env": "^7.12.17",
+        "@babel/preset-react": "^7.12.13",
+        "babel-loader": "^8.2.2",
+        "html-webpack-plugin": "^5.2.0",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "webpack": "^5.23.0"
     }
 }
