--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
         "@babel/preset-env": "^7.12.17",
         "@babel/preset-react": "^7.12.13",
         "babel-loader": "^8.2.2",
+        "css-loader": "^5.1.1",
         "html-webpack-plugin": "^5.2.0",
+        "mini-css-extract-plugin": "^1.3.9",
         "prop-types": "^15.7.2",
+        "style-loader": "^2.0.0",
         "webpack-cli": "^4.5.0",
         "webpack-dev-server": "^3.11.2"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.3",
+        "@material-ui/icons": "^4.11.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "webpack": "^5.23.0"
