--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "dependencies": {
         "@material-ui/core": "^4.11.3",
         "@material-ui/icons": "^4.11.2",
+        "connected-react-router": "^6.9.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.9",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
         "webpack": "^5.23.0"
     }
 }
